# scimd

./: .gitignore  AUTHORING_GUIDE.md  CITATION.cff  CONTRIBUTING.md  LICENSE  RAG_GUIDE.md  README.md  SPECIFICATION.md  examples.md  examples.py  llm_format_benchmark_report.md  papertestv2.smd  pyproject.toml  quick-ex.smd  requirements.txt  scimd_parser.py  scimd_validator.py  use-cases.md
.github/workflows/: ci.yml  publish.yml
benchmark-paper/: papertest-Marker.md  papertest.smd  papertest.xml  papertest_docling.md  papertest_meta.json
benchmark-paper/html/: Whistle characterization of long-beaked common dolphin (Delphinus delphis bairdii) in La Paz Bay, Gulf of California.htm
benchmark-paper/papertest/: papertest_pymupdf.md
docs/plans/: 2026-03-17-scimd-public-launch.md
documentation/: examples.md  format.md  index.md  parser.md  validator.md
mock-examples/: full-paper.smd  humpback_whale_acoustic_variation.smd  mock_document.smd  perovskite_solar_cell_efficiency.smd  sparse_attention_optimization.smd  type2_diabetes_inhibitor.smd  urban_heat_island_precipitation.smd
tests/: conftest.py  test_parser.py  test_validator.py
