[build-system]
requires = ["hatchling>=1.8.0"]
build-backend = "hatchling.build"

[project]
name = "pyscimd"
version = "0.1.2"
description = "SciMD — Scientific Markdown for the AI Era"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "Juan Francisco Avilés Calderón", email = "avilesfran21@gmail.com" }
]
requires-python = ">=3.10"
dependencies = ["PyYAML>=6.0"]

[tool.hatch.build.targets.wheel]
include = ["scimd_parser.py", "scimd_validator.py"]

[project.scripts]
scimd = "scimd_parser:main"
scimd-validate = "scimd_validator:main"

[project.urls]
Homepage = "https://github.com/avifranca/scimd"
